  interaction than reboot. AP enabled while in configuration mode.
- iotsaBatteryMod sleep modes rationalized. 
- Python iotsa package (including iotsaConfig as a script entry point)
- Added API for per-module objects.
- Added IotsaRtcMod to control ds1302 realtime clock module.
- Prefer libc timezone handling over Timezone library
- Moved to Arduino framework 3.0

iotsa 2.4.1 - 23-Apr-2020

- Version number reported was wrong. Fixed.

iotsa 2.4 - 18-Apr-2020

- Added BLE support (esp32 only): iotsa devices can now be a Bluetooth LE server.
- Added IotsaBatteryMod which enables power-saving for battery-operated devices.
- Fixed building of iotsa without WiFi support.
- Refactored various classes to enable wifi-less operation and different webserver implementations.
- Allow use of esp32_https_server_compat as http or https server (esp32 only). Enabled by default.
- WiFi can now switch between AP en STAtion mode on the fly, and is handled in loop() so
  boot is much faster.
- Added IotsaInput module for handling buttons, touchpads (esp32 only) and rotary encoders.
- Versioning scheme changed: even minor numbers are stable, odd numbers are work-in-progress.

iotsa 2.2 - 03-Dec-2019

- Updated to PlatformIO 4
- newer version of esp8266 and esp32 Arduino frameworks
- new ArduinoJson API
- Rationalized PlatformIO/Arduino support
- Backups and file listing implemented on esp32

iotsa 2.1 - 02-Jun-2019

- Got rid of default password, it provides no extra security.
- Allow uploading of certificate/key as DER with POST requests.
- Write-only REST attributes now always have a "has_" boolean in the read interface to signal that they exist and are set.
- REST read interface was made more consistent.

iotsa 2.0.1 - 01-Jul-2018

- Various changes to make https (server side) more usable, such as
  interfacing to the Igor Certificate Authority, and forwarding http
  requests to https. Added some scripts to help create certificates.